[package]
name = "passki"
version = "0.1.0"
edition = "2024"
description = "A simple and secure WebAuthn/Passkey authentication library"
license = "Apache-2.0"
repository = "https://github.com/gblach/passki"
documentation = "https://docs.rs/passki"
readme = "README.md"
keywords = ["webauthn", "passkey", "authentication", "fido2", "cryptography"]
categories = ["authentication", "cryptography", "web-programming"]

[dependencies]
aws-lc-rs = "1"
base64 = "0.22"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
actix-web = "4"
axum = { version = "0.8", features = ["json"] }
env_logger = "0.11"
poem = "3"
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
