[package]
name = "passki"
version = "0.2.0"
edition = "2024"
description = "A simple and secure WebAuthn/Passkey authentication library"
documentation = "https://docs.rs/passki"
readme = "README.md"
repository = "https://github.com/gblach/passki"
license = "Apache-2.0"
keywords = ["webauthn", "passkey", "authentication", "fido2", "cryptography"]
categories = ["authentication", "cryptography", "web-programming"]

[dependencies]
aws-lc-rs = "1"
base64ct = { version = "1", features = ["alloc"] }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
actix-web = "4"
axum = { version = "0.8", features = ["json"] }
env_logger = "0.11"
poem = "3"
rocket = { version = "0.5", features = ["json"] }
time = ">=0.3, <0.3.52"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
warp = { version = "0.4", features = ["server"] }
